# server/src/Services/UserService.ts
@@ -5,6 +5,7 @@ import SendMessage from './SendMessage';
 import bcrypt from 'bcrypt';
 import TokenService from './TokenService';
 import ApiError from '../Exeptions/ApiError';
+import ForAllService from './ForAllService';
 type getList = {
     settingList: {
         start: number,
@@ -13,6 +14,17 @@ type getList = {
     filter: {},
     MODE: "sequrity" | "forAll"
 }
+type UserToCookie = {
+    mail: string,
+    nickname: string,
+    id: number,
+    mailveryfity: boolean,
+    role: {
+        user: boolean,
+        master: boolean,
+        admin: boolean
+    }
+};
 class UserService {
     static createDateAsUTC() {
         const date = new Date()
@@ -64,7 +76,7 @@ class UserService {
     async getUserInfoById({ id, MODE }: { id: number, MODE: "sequrity" | "forAll" }) {
         const res: QueryResult = await pool.query(`SELECT ${UserService.getMasMode(MODE).join(', ')} FROM users WHERE id = $1`, [id]);
         if (res.rows.length == 0)
-            throw ApiError.BadRequest({ message: "Пользователя не существует" })
+            throw ApiError.BadRequest({ status: 470, message: "Пользователя не существует" })
         return res.rows[0];
     }
     async getUserRole({ id }: { id: number }) {
@@ -94,7 +106,7 @@ class UserService {
         SendMessage.notification({ text: "Пароль был изменен", mail: mail })
         const res: QueryResult = await pool.query(`UPDATE users SET passCache = $1 WHERE mail = $2 AND id = $3;`, [await UserService.getCache(pass), mail, id]);
         if (res.rowCount == 0)
-            throw ApiError.BadRequest({ message: "Пользователь не существует" })
+            throw ApiError.BadRequest({ status: 470, message: "Пользователя не существует" })
     }
     async changeNickName({ id, mail, nickname }: { id: number, mail: string, nickname: string }) {
         UserService.getTrueMail(mail)
@@ -102,27 +114,13 @@ class UserService {
         SendMessage.notification({ text: "Никнейм был изменен", mail: mail })
         const res: QueryResult = await pool.query(`UPDATE users SET nickname = $1 WHERE mail = $2 AND id = $3;`, [nickname, mail, id]);
         if (res.rowCount == 0)
-            throw ApiError.BadRequest({ message: "Пользователь не существует" })
-    }
-    async changeImage({ id, mail, fileName }: { id: number, mail: string, fileName: string }) {
-        //TODO: сюда только подгрузить новую картинку на сервак
-        UserService.getTrueMail(mail)
-        SendMessage.notification({ text: "Изображение было изменено", mail: mail })
-        const res: QueryResult = await pool.query(`UPDATE users SET img = $1 WHERE mail = $2 AND id = $3;`, [fileName, mail, id]);
-        if (res.rowCount == 0)
-            throw ApiError.BadRequest({ message: "Пользователь не существует" })
-    }
-    async userExist({ id, mail }: { id: number, mail: string }) {
-        const res = await pool.query(`SELECT id FROM users WHERE id = $1 AND mail = $2`, [id, mail])
-        if (res.rows.length == 0)
-            return false;
-        else
-            return true;
+            throw ApiError.BadRequest({ status: 470, message: "Пользователя не существует" })
+
     }
     async changeRole({ id, role, mail }: { mail: string, id: number, role: string }) {
         UserService.getTrueMail(mail);
         let res: QueryResult;
-        if (! await this.userExist({ id: id, mail: mail })) throw ApiError.BadRequest({ message: "Пользователя не существует" })
+        if (! await ForAllService.isExists({ id: id, tableName: 'users' })) throw ApiError.BadRequest({ status: 470, message: "Пользователя не существует" })
         switch (role) {
             case "user":
                 res = await pool.query(`SELECT active FROM masters WHERE id = $1`, [id]);
@@ -152,14 +150,14 @@ class UserService {
         UserService.getTrueMail(mail);
         let res: QueryResult = await pool.query(`UPDATE masters SET description = $2 WHERE id = $1`, [id, description]);
         if (res.rowCount == 0)
-            throw ApiError.BadRequest({ message: "Мастера не существует" })
+            throw ApiError.BadRequest({ status: 473, message: "Мастера не существует" })
     }
     async changeMail({ id, mail }: { id: number, mail: string }) {
         UserService.getTrueMail(mail)
         SendMessage.sendMailAccess({ type: "changemail", mail: mail, userid: id })
         const res: QueryResult = await pool.query(`UPDATE users SET mail = $1 WHERE  id = $2;`, [mail, id]);
         if (res.rowCount == 0)
-            throw ApiError.BadRequest({ message: "Пользователь не существует" })
+            throw ApiError.BadRequest({ status: 470, message: "Пользователя не существует" })
     }
     async activateLink({ link }: { link: string }) {
         const res: QueryResult = await pool.query(`SELECT userid, dateend, mail FROM maillink WHERE link = $1;`, [link]);
@@ -182,12 +180,7 @@ class UserService {
         UserService.getTruePass(pass)
         const id = (await pool.query(`INSERT INTO users(mail, passCache, nickname) VALUES ($1, $2, $3) RETURNING id;`, [mail, await UserService.getCache(pass), nickname])).rows?.[0]?.id;
         await SendMessage.sendMailAccess({ type: 'registration', mail: mail, userid: id });
-        const tokens = await TokenService.generateToken({ payload: { id: id, mail: mail, nickname: nickname } })
-        await TokenService.saveToken({ userId: id, refreshToken: tokens.refreshToken })
-        return {
-            redirectionId: id,
-            tokens: tokens
-        };
+        return await this.getNewToken({id:id})
     }
     async login({ mail, pass }: { mail: string, pass: string }) {
         UserService.getTrueMail(mail)
@@ -197,12 +190,7 @@ class UserService {
             throw ApiError.BadRequest({ message: "Почты не существует" })
         if (!(await bcrypt.compare(pass, res.rows[0].passcache)))
             throw ApiError.BadRequest({ message: "Неверный пароль" })
-        const tokens = await TokenService.generateToken({ payload: { id: res.rows[0].id, mail: mail, nickname: res.rows[0].nickname } })
-        await TokenService.saveToken({ userId: res.rows[0].id, refreshToken: tokens.refreshToken })
-        return {
-            redirectionId: res.rows[0].id,
-            tokens: tokens
-        };
+        return await this.getNewToken({id:res.rows[0].id})
     }
     async logout({ refreshToken }: { refreshToken: string }) {
         await TokenService.removeToken({ refreshToken })
@@ -210,18 +198,23 @@ class UserService {
     async refresh({ oldRefreshToken }: { oldRefreshToken: string }) {
         if (!oldRefreshToken) {
             await TokenService.removeToken({ refreshToken: oldRefreshToken })
-            throw ApiError.UnavtorisationError() 
+            throw ApiError.UnavtorisationError()
         }
         const user = await TokenService.validateRefreshToken({ token: oldRefreshToken })
         if (!user || ((await pool.query(`SELECT count(*) as sum FROM refreshtokens WHERE userid = $1`, [user.id])).rows[0].sum == 0)) {
             await TokenService.removeToken({ refreshToken: oldRefreshToken })
             throw ApiError.UnavtorisationError()
         }
-        const newUser = await (new UserService).getUserInfoById({ id: user.id, MODE: "sequrity" }) as { mail: string, nickname: string, id: number }
+        return await this.getNewToken({id:user.id})
+    }
+    async getNewToken({ id }: { id: number }) {
+        
+        const newUser = (await (new UserService).getUserInfoById({ id: id, MODE: "sequrity" })) as UserToCookie
         const tokens = await TokenService.generateToken({ payload: { id: newUser.id, mail: newUser.mail, nickname: newUser.nickname } })
         await TokenService.saveToken({ userId: newUser.id, refreshToken: tokens.refreshToken })
+        newUser.role = await this.getUserRole({id:newUser.id})
         return {
-            redirectionId: newUser.id,
+            user: newUser,
             tokens: tokens
         };
     }
